[gd_scene load_steps=6 format=3 uid="uid://b4fkai66dfxhy"]

[ext_resource type="Texture2D" uid="uid://uu733d653n6n" path="res://Assets/UI/Towers/towerDefense_tile180.png" id="1_24roj"]
[ext_resource type="Script" path="res://Scenes/Turrets/missileT1.gd" id="1_e7r8d"]
[ext_resource type="Texture2D" uid="uid://b6vr0ug1w7fcx" path="res://Assets/UI/Towers/towerDefense_tile228.png" id="2_udvnw"]
[ext_resource type="Texture2D" uid="uid://dbovm1eq4omx6" path="res://Assets/UI/Towers/towerDefense_tile251.png" id="3_gohtw"]

[sub_resource type="CircleShape2D" id="CircleShape2D_3hspi"]
radius = 20.0

[node name="MissileT1" type="Node2D"]
script = ExtResource("1_e7r8d")

[node name="Base" type="Sprite2D" parent="."]
texture = ExtResource("1_24roj")

[node name="Turret" type="Sprite2D" parent="."]
texture = ExtResource("2_udvnw")

[node name="Slot1" type="Marker2D" parent="Turret"]
position = Vector2(5, -10)

[node name="Missile1" type="Sprite2D" parent="Turret/Slot1"]
texture = ExtResource("3_gohtw")

[node name="Slot2" type="Marker2D" parent="Turret"]
position = Vector2(5, 10)

[node name="Missile2" type="Sprite2D" parent="Turret/Slot2"]
texture = ExtResource("3_gohtw")

[node name="Range" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Range"]
visible = false
shape = SubResource("CircleShape2D_3hspi")

[connection signal="body_entered" from="Range" to="." method="_on_range_body_entered"]
[connection signal="body_exited" from="Range" to="." method="_on_range_body_exited"]
